<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>xyz.derkades</groupId>
	<artifactId>ServerSelectorX</artifactId>
	<version>Premium-3.1.7-beta</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<build>
		<sourceDirectory>src</sourceDirectory>

		<resources>
			<resource>
				<directory>resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>

		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.0</version>
				<configuration>
					<source>11</source>
					<target>11</target>
					<showDeprecation>true</showDeprecation>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.6.0</version>
				<configuration>
					<createDependencyReducedPom>false</createDependencyReducedPom>
					<minimizeJar>true</minimizeJar>

					<relocations>
						<relocation>
							<pattern>org.bstats</pattern>
							<shadedPattern>xyz.derkades.serverselectorx.lib.bstats</shadedPattern>
						</relocation>
						<relocation>
							<pattern>de.tr7zw.changeme.nbtapi</pattern>
							<shadedPattern>xyz.derkades.serverselectorx.lib.nbtapi</shadedPattern>
						</relocation>
						<relocation>
							<pattern>com.google.gson</pattern>
							<shadedPattern>xyz.derkades.serverselectorx.lib.gson</shadedPattern>
						</relocation>
						<relocation>
							<pattern>org.glassfish.grizzly</pattern>
							<shadedPattern>xyz.derkades.serverselectorx.lib.grizzly</shadedPattern>
						</relocation>
						<relocation>
							<pattern>org.intellij.lang.annotations</pattern>
							<shadedPattern>xyz.derkades.serverselectorx.lib.intellij-annotations</shadedPattern>
						</relocation>
						<relocation>
							<pattern>org.jetbrains.annotations</pattern>
							<shadedPattern>xyz.derkades.serverselectorx.lib.jetbrains-annotations</shadedPattern>
						</relocation>
						<relocation>
							<pattern>net.kyori</pattern>
							<shadedPattern>xyz.derkades.serverselectorx.lib.kyori</shadedPattern>
						</relocation>
						<relocation>
							<pattern>xyz.derkades.derkutils</pattern>
							<shadedPattern>xyz.derkades.serverselectorx.lib.derkutils</shadedPattern>
						</relocation>
					</relocations>

					<filters>
						<filter>
							<artifact>*:*</artifact>
							<excludes>
								<exclude>META-INF/</exclude>
								<exclude>LICENSE</exclude>
							</excludes>
						</filter>
					</filters>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>

	<dependencies>

		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>1.13.2-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>xyz.derkades</groupId>
			<artifactId>Derkutils</artifactId>
			<version>spigot-1.13</version>
		</dependency>

		<dependency>
			<groupId>org.bstats</groupId>
			<artifactId>bstats-bukkit</artifactId>
			<version>3.0.0</version>
		</dependency>

		<dependency>
			<groupId>me.clip</groupId>
			<artifactId>placeholderapi</artifactId>
			<version>2.11.6</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.13.1</version>
		</dependency>

		<dependency>
			<groupId>de.tr7zw</groupId>
			<artifactId>item-nbt-api</artifactId>
			<version>2.15.1-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>net.kyori</groupId>
			<artifactId>adventure-api</artifactId>
			<version>4.23.0</version>
		</dependency>

		<dependency>
			<groupId>net.kyori</groupId>
			<artifactId>adventure-platform-bukkit</artifactId>
			<version>4.4.0</version>
		</dependency>

		<dependency>
			<groupId>net.kyori</groupId>
			<artifactId>adventure-text-minimessage</artifactId>
			<version>4.22.0</version>
		</dependency>

		<dependency>
			<groupId>org.glassfish.grizzly</groupId>
			<artifactId>grizzly-http-server</artifactId>
			<version>4.0.2</version>
		</dependency>

	</dependencies>

	<repositories>

		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots</url>
		</repository>

		<repository>
			<id>CodeMC</id>
			<url>https://repo.codemc.org/repository/maven-public</url>
		</repository>

		<repository>
			<id>placeholderapi</id>
			<url>https://repo.extendedclip.com/content/repositories/placeholderapi</url>
		</repository>

	</repositories>

</project>
